--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
-	<div id="wrap" class="pt-10">
-		<div class="info">
+	<div id="wrap" class="mt-10">
+		<h1 class="sr-only">07's Profile</h1>
+		<div class="info contentWidth">
 			<div class="avatar">
 				<div class="avatarImg fontRobo"></div>
 			</div>
@@ -25,104 +26,143 @@
 				<a class="nav-item">My Work</a>
 				<a class="nav-item">Contact</a>
 			</nav>
-			<div class="infoContent pb-4">
-				<h2 class="h2 font-large font-weight400 pt-2">工作經歷</h2>
-				<div class="description pt-6 pb-8">
+			<div class="infoContent mb-4">
+				<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">工作經歷</h2>
+				<div class="description mt-6 mb-8">
 					<p class="font-medium font-weight700">Isobar 安索帕</p>
-					<p class="font-medium pt-1">
-						年為電通集團旗下提供設計、策略、創意和技術等多種數位行銷解決方案的代理商。任職期間接觸過許多不同類型的客戶和案件，累積了豐富的經驗，工作內容也隨年資累積逐漸轉換，從創意發想、活動設計到前端切版與UI設計師等多項職責，雖然職責不同，但是工作目標都是與團隊一起瞭解客戶需求和目標，並提供相應的解決方案。
+					<p class="font-medium mt-1">
+						任職於Isobar 安索帕
+						14年，安索帕為電通集團旗下提供設計、策略、創意和技術等多種數位行銷解決方案的代理商。期間接觸過許多不同類型的客戶與與專案，類型也從網路活動、媒體製作、網站製作到實體店頭、OOH...等，累積了豐富的經驗，工作內容(專業)也隨年資累積逐漸轉換，從創意發想、活動設計到前端切版與UI設計師等多項職責，雖然職責不同，但是工作目標都是與團隊一起瞭解客戶需求和目標，並提出對應的策略進一步的產出相關的需求製作物。
 					</p>
-					<ul class="timeline pt-2 pb-4">
+					<ul class="timeline mt-2 mb-4">
 						<li class="timeline-item">
-							<p class="font-medium font-weight500">2023-2019 UI Designer<br /><span
-									class="font-gray500 font-weight300">負責網站和APP的設計和開發，參與研究分析、設計策略提案與制定</span></p>
+							<p class="font-medium font-weight400">UI Designer<br /><span
+									class="font-gray500 font-weight300">(2019-2023)
+									負責網站和APP的設計和開發，參與研究分析、設計策略提案與制定</span>
+							</p>
 						</li>
 						<li class="timeline-item">
-							<p class="font-medium font-weight500">2019-2014 前端切版<br /><span
-									class="font-gray500 font-weight300">進入Html CSS的世界，企業網站、網路活動、App切版</span></p>
+							<p class="font-medium font-weight400">前端切版<br /><span
+									class="font-gray500 font-weight300">(2014-2019) 進入Html CSS的世界，企業網站、網路活動、App切版</span>
+							</p>
 						</li>
 						<li class="timeline-item">
-							<p class="font-medium font-weight500">2014-2007 經驗設計師<br /><span
-									class="font-gray500 font-weight300">創意活動發想、提案、製作各式媒體素材製作resize</span></p>
+							<p class="font-medium font-weight400">經驗設計師<br /><span
+									class="font-gray500 font-weight300">(2008-2014) 創意活動發想、提案、製作各式媒體素材製作resize</span>
+							</p>
 						</li>
 					</ul>
-					<p class="font-medium font-weight700 pt-2">橙網科技</p>
-					<p class="font-medium font-weight500">2014-2007 經驗設計師<br /><span
-							class="font-gray500 font-weight300">創意活動發想、提案、製作各式媒體素材製作resize</span></p>
-					<p class="font-medium font-weight700 pt-4">玉馬門創意設計有限公司</p>
-					<p class="font-medium font-weight500">2007-2004 Web Designer<br /><span
-							class="font-gray500 font-weight300">企業網頁提案設計切版、平面輸出設計完稿支援</span></p>
+					<p class="font-medium font-weight700 mt-4">橙網科技</p>
+					<p class="font-medium font-weight400">經驗設計師<br /><span
+							class="font-gray500 font-weight300">(2007-2008) 創意活動發想、提案、製作各式媒體素材製作resize</span></p>
+					<p class="font-medium font-weight700 mt-4">玉馬門創意設計</p>
+					<p class="font-medium font-weight400">Web Designer<br /><span
+							class="font-gray500 font-weight300">(2004-2007) 企業網頁提案設計切版、平面輸出設計完稿支援</span></p>
 				</div>
 			</div>
 		</div>
-		<div class="works">
-			<h2 class="h2 h2--works font-large font-weight400">作品們</h2>
-			<ul class="listWorks pt-6">
+		<div class="works articleWidth">
+			<h2 class="h2 h2--dots h2--works font-xLarge font-weight400">作品們</h2>
+			<ul class="listWorks mt-6">
 				<li class="listWorks-item">
 					<p><span class="font-cyan500 font-weight500">EvaAir</span><a
 							href="https://www.evaair.com/zh-tw/index.html" target="_bl
 						" class="link--linkOut">View
 							Website</a></p>
-					<a href="works1.html" class="link--works">
-						<h3 class="h3 font-large font-weight700 pt-1">長榮航空</h3>
-						<p class="font-medium font-weight300 pt-1">
-							參前期使用者研究、規劃提案到UI設計的全方位改版專案，設計方向在半重塑品牌形象結合長榮航空的品牌理念，在版面設計上多圓弧與圓角暗示品牌文化中的服務與圓融，用色上也一改過去企業較深較沈穩的配色，打破之前太過穩重老派的品牌風格，並同時須符合WCAG規範，採用更現代化、活潑、有活力的風格來呈現，進一步傳達給使用者對長榮新的感受。
-						</p>
-						<img src="images/img-work1.jpg" class="img pt-4" />
-					</a>
+					<h3 class="h3 font-large font-weight700 mt-1">長榮航空</h3>
+					<p class="font-medium font-weight300 mt-1">
+						參前期使用者研究、規劃提案到UI設計的全方位改版專案，設計方向在半重塑品牌形象結合長榮航空的品牌理念，在版面設計上多圓弧與圓角暗示品牌文化中的服務與圓融，用色上也一改過去企業較深較沈穩的配色，打破之前太過穩重老派的品牌風格，並同時須符合WCAG規範，採用更現代化、活潑、有活力的風格來呈現，進一步傳達給使用者對長榮新的感受...<a
+							href="works1.html" class="link--works font-weight500">更多內容</a>
+					</p>
+					<img src="images/img-work1.jpg" class="img mt-4" />
 				</li>
 				<li class="listWorks-item">
 					<p><span class="font-cyan500 font-weight500">Fhtrust</span><a href="https://www.fhtrust.com.tw/"
 							target="_bl
 						" class="link--linkOut">View
 							Website</a></p>
-					<a href="works2.html" class="link--works">
-						<h3 class="h3 font-large font-weight700 pt-1">復華投信</h3>
-						<p class="font-medium font-weight300 pt-1">
-							重新設計官網架構，從舊有的架構中淘汰掉複雜、冗餘的內容，使得網站整體更加簡潔明瞭。新的UI設計，提升視覺效果，讓龐雜的金融資訊更加好閱讀。同時，也更加注重產品的介紹和說明，提供友善的產品資訊和投資試算UI，幫助客戶更容易理解復華投信的複雜產品和服務。
-						</p>
-						<img src="images/img-work2.jpg" class="img pt-4" />
-					</a>
+					<h3 class="h3 font-large font-weight700 mt-1">復華投信</h3>
+					<p class="font-medium font-weight300 mt-1">
+						重新設計官網架構，從舊有的架構中淘汰掉複雜、冗餘的內容，使得網站整體更加簡潔明瞭。新的UI設計，提升視覺效果，讓龐雜的金融資訊更加好閱讀。同時，也更加注重產品的介紹和說明，提供友善的產品資訊和投資試算UI，幫助客戶更容易理解復華投信的複雜產品和服務...<a
+							href="works2.html" class="link--works font-weight500">更多內容</a>
+					</p>
+					<img src="images/img-work2.jpg" class="img mt-4" />
 				</li>
 				<li class="listWorks-item">
 					<p><span class="font-cyan500 font-weight500">E.SUN Securities</span><a
 							href="https://www.esunsec.com.tw/" target="_bl
 						" class="link--linkOut">View
 							Website</a></p>
-					<a href="works2.html" class="link--works">
-						<h3 class="h3 font-large font-weight700 pt-1">玉山證券 大小網</h3>
-						<p class="font-medium font-weight300 pt-1">
-							在專案角色為前端切版，將設計師提供的設計轉化為可操作的HTML和CSS代碼，同時注重網站的可用性和使用者體驗，以便讓使用者可以輕鬆地使用和瀏覽網站。
-						</p>
-						<img src="images/img-work3.jpg" class="img pt-4" />
-					</a>
+					<h3 class="h3 font-large font-weight700 mt-1">玉山證券 大小網</h3>
+					<p class="font-medium font-weight300 mt-1">
+						在專案角色為前端切版，將設計師提供的設計轉化為可操作的HTML和CSS代碼，同時注重網站的可用性和使用者體驗，以便讓使用者可以輕鬆地使用和瀏覽網站...<a
+							href="works3.html" class="link--works font-weight500">更多內容</a>
+					</p>
+					<img src="images/img-work3.jpg" class="img mt-4" />
 				</li>
 				<li class="listWorks-item">
-					<a href="works2.html" class="link--works">
-						<h3 class="h3 font-large font-weight700 pt-1">UDN Shopping IPad版</h3>
-						<p class="font-medium font-weight300 pt-1">
-							客戶breif要為年長者製作符合使用體驗需求的Ipad版本(隨著RWD技術的演進，雖然此版本已不在現在)，製作過程中因專案時程必須快速開發，整個團隊採用paper
-							prototype讓規劃、設計以及前端快速有共識並隨時Update與調整，是很有趣的過程，在品牌視覺設計上雖然只有製作Ipad版本，客戶很滿意進而後續客戶內部設計團隊沿用修改當時Web版。
-						</p>
-						<img src="images/img-work4.jpg" class="img pt-4" />
-					</a>
+					<h3 class="h3 font-large font-weight700 mt-1">UDN Shopping IPad版</h3>
+					<p class="font-medium font-weight300 mt-1">
+						客戶breif要為年長者製作符合使用體驗需求的Ipad版本(隨著RWD技術的演進，雖然此版本已不在現在)，製作過程中因專案時程必須快速開發，整個團隊採用paper
+						prototype讓規劃、設計以及前端快速有共識並隨時Update與調整，是很有趣的過程，在品牌視覺設計上雖然只有製作Ipad版本，客戶很滿意進而後續客戶內部設計團隊沿用修改當時Web版...<a
+							href="works3.html" class="link--works font-weight500">更多內容</a>
+					</p>
+					<img src="images/img-work4.jpg" class="img mt-4" />
 				</li>
-			</ul>
-			<ul class="listMoreWork">
-				<li class="listMoreWork-item">
-					<p>Dantsu / Dan is Moving</p>
-					<img src="images/img-moreWorks1.png" alt="">
-				</li>
-				<li class="listMoreWork-item">
-					<p>Logitech / UE潮玩360</p>
-					<img src="images/img-moreWorks1.png" alt="">
-				</li>
-				<li class="listMoreWork-item"></li>
-				<li class="listMoreWork-item"></li>
-				<li class="listMoreWork-item"></li>
-				<li class="listMoreWork-item"></li>
 			</ul>
 		</div>
+		<ul class="listMoreWork contentWidth">
+			<li class="listMoreWork-item">
+				<a href="javascript:;" class="link--works">
+					<p class="fontRobo font-medium font-weight500">Dantsu / Dan is Moving</p>
+					<img src="images/img-moreWorks1.jpg" alt="" class="img mt-2">
+				</a>
+			</li>
+			<li class="listMoreWork-item">
+				<a href="javascript:;" class="link--works">
+					<p class="font-medium font-weight500">Logitech / UE潮玩360</p>
+					<img src="images/img-moreWorks2.jpg" alt="" class="img mt-2">
+				</a>
+			</li>
+			<li class="listMoreWork-item">
+				<a href="javascript:;" class="link--works">
+					<p class="font-medium font-weight500">Adidas / 酷涼零死角Climacool 大風吹</p>
+					<img src="images/img-moreWorks3.jpg" alt="" class="img mt-2">
+				</a>
+			</li>
+			<li class="listMoreWork-item">
+				<a href="javascript:;" class="link--works">
+					<p class="font-medium font-weight500">Adidas Women / 自信魔鏡</p>
+					<img src="images/img-moreWorks4.jpg" alt="" class="img mt-2">
+				</a>
+			</li>
+			<li class="listMoreWork-item">
+				<a href="javascript:;" class="link--works">
+					<p class="font-medium font-weight500">SAMSUNG / 樂趣雙螢</p>
+					<img src="images/img-moreWorks5.jpg" alt="" class="img mt-2">
+				</a>
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-medium font-weight500">富達 / 投資金頭腦</p>
+				<img src="images/img-moreWorks6.jpg" alt="" class="img mt-2">
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-medium font-weight500">黑貓宅急便 / 黑貓鳥行李</p>
+				<img src="images/img-moreWorks7.jpg" alt="" class="img mt-2">
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-medium font-weight500">黑貓宅急便 / X’mas交換禮物派對</p>
+				<img src="images/img-moreWorks8.jpg" alt="" class="img mt-2">
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-medium font-weight500">7-11 / 歡樂雲端超商</p>
+				<img src="images/img-moreWorks9.jpg" alt="" class="img mt-2">
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-medium font-weight500">7-11 / 萬聖節搗蛋鬼派對</p>
+				<img src="images/img-moreWorks1.jpg" alt="" class="img mt-2">
+			</li>
+		</ul>
 	</div>
 </body>
 
