--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=Roboto:wght@100;300;400;500;700&display=swap"
 		rel="stylesheet">
 	<title>07's Profile</title>
+	<style>
+		html {
+			scroll-behavior: smooth;
+		}
+	</style>
 </head>
 
 <body>
@@ -22,9 +27,9 @@
 				<div class="avatarImg fontRobo"></div>
 			</div>
 			<nav class="nav">
-				<a class="nav-item">En Version</a>
-				<a class="nav-item">My Work</a>
-				<a class="nav-item">Contact</a>
+				<a href="javascript:;" class="nav-item">En Version(coming soon)</a>
+				<a href="#works" class="nav-item">作品們</a>
+				<a href="#contact" class="nav-item">聯絡我</a>
 			</nav>
 			<div class="infoContent mb-4">
 				<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">工作經歷</h2>
@@ -62,7 +67,7 @@
 			</div>
 		</div>
 		<div class="works articleWidth">
-			<h2 class="h2 h2--dots h2--works font-xLarge font-weight400">作品們</h2>
+			<h2 id="works" class="h2 h2--dots h2--works font-xLarge font-weight400">作品們</h2>
 			<ul class="listWorks mt-6">
 				<li class="listWorks-item">
 					<p><span class="font-cyan500 font-weight500">EvaAir</span><a
