--- a/index.html
+++ b/index.html
@@ -116,36 +116,27 @@
 				</li>
 			</ul>
 		</div>
+		<h2 id="works" class="">行銷類作品</h2>
 		<ul class="listMoreWork contentWidth">
 			<li class="listMoreWork-item">
-				<a href="javascript:;" class="link--works">
-					<p class="fontRobo font-medium font-weight500">Dantsu / Dan is Moving</p>
-					<img src="images/img-moreWorks1.jpg" alt="" class="img mt-2">
-				</a>
+				<p class="fontRobo font-medium font-weight500">Dantsu / Dan is Moving</p>
+				<img src="images/img-moreWorks1.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<a href="javascript:;" class="link--works">
-					<p class="font-medium font-weight500">Logitech / UE潮玩360</p>
-					<img src="images/img-moreWorks2.jpg" alt="" class="img mt-2">
-				</a>
+				<p class="font-medium font-weight500">Logitech / UE潮玩360</p>
+				<img src="images/img-moreWorks2.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<a href="javascript:;" class="link--works">
-					<p class="font-medium font-weight500">Adidas / 酷涼零死角Climacool 大風吹</p>
-					<img src="images/img-moreWorks3.jpg" alt="" class="img mt-2">
-				</a>
+				<p class="font-medium font-weight500">Adidas / 酷涼零死角Climacool 大風吹</p>
+				<img src="images/img-moreWorks3.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<a href="javascript:;" class="link--works">
-					<p class="font-medium font-weight500">Adidas Women / 自信魔鏡</p>
-					<img src="images/img-moreWorks4.jpg" alt="" class="img mt-2">
-				</a>
+				<p class="font-medium font-weight500">Adidas Women / 自信魔鏡</p>
+				<img src="images/img-moreWorks4.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<a href="javascript:;" class="link--works">
-					<p class="font-medium font-weight500">SAMSUNG / 樂趣雙螢</p>
-					<img src="images/img-moreWorks5.jpg" alt="" class="img mt-2">
-				</a>
+				<p class="font-medium font-weight500">SAMSUNG / 樂趣雙螢</p>
+				<img src="images/img-moreWorks5.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
 				<p class="font-medium font-weight500">富達 / 投資金頭腦</p>
