--- a/works1.html
+++ b/works1.html
@@ -91,7 +91,7 @@
 				</figure>
 			</article>
 			<h2 id="morePage" class="h2 h2--dots font-xLarge font-weight400 mt-16">更多頁面</h2>
-			<ul id="listMorePage" class="listMorePage w100 mt-4">
+			<ul class="listMorePage w100 mt-4">
 				<li class="listMorePage-item">
 					<a href="#lightbox" class="link--morePage">
 						<figure>
@@ -153,7 +153,7 @@
 					</a>
 				</li>
 			</ul>
-			<div class="w100 alignCenter mb-8">
+			<div class="w100 alignCenter pb-8">
 				<a href="https://www.evaair.com/zh-tw/index.html" target="_blank"
 					class="link--pageLinkOutBottom link--pageLinkOutEvaBottom mt-4">View
 					Website</a>
@@ -163,18 +163,14 @@
 	</div>
 	<div id="lightbox" class="lightbox">
 		<a href="#morePage" class="lightbox-close"></a>
-		<div class="lightbox-content">
-			<div id="tabs" class="tabs w100 mt-4 mb-4">
-				<a href="javascript:;" class="tabs-button tabs-button--desktop mr-4 active">Desktop</a>
-				<a href="javascript:;" class="tabs-button tabs-button--mobile">Mobile</a>
-			</div>
-			<ul id="tabsContent" class="tabsContent">
-				<li class="tabsContent-item active">
-				</li>
-				<li class="tabsContent-item">
-				</li>
-			</ul>
+		<div class="tabs">
+			<a href="javascript:;" class="tabs-button tabs-button--desktop mr-4 active">Desktop</a>
+			<a href="javascript:;" class="tabs-button tabs-button--mobile">Mobile</a>
 		</div>
+		<ul class="tabsContent">
+			<li class="tabsContent-item"></li>
+			<li class="tabsContent-item"></li>
+		</ul>
 	</div>
 </body>
 
