--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 						參前期使用者研究、規劃提案到UI設計的全方位改版專案，設計方向在半重塑品牌形象結合長榮航空的品牌理念，在版面設計上多圓弧與圓角暗示品牌文化中的服務與圓融，用色上也一改過去企業較深較沈穩的配色，打破之前太過穩重老派的品牌風格，並同時須符合WCAG規範，採用更現代化、活潑、有活力的風格來呈現，進一步傳達給使用者對長榮新的感受...<a
 							href="works1.html" class="link--works font-weight500">更多內容</a>
 					</p>
-					<img src="images/img-work1.jpg" class="img mt-4" />
+					<a href="works1.html">
+						<img src="images/img-work1.jpg" class="img mt-4" />
+					</a>
 				</li>
 				<li class="listWorks-item">
 					<p><span class="font-cyan500 font-weight500">Fhtrust</span><a href="https://www.fhtrust.com.tw/"
@@ -91,7 +93,9 @@
 						重新設計官網架構，從舊有的架構中淘汰掉複雜、冗餘的內容，使得網站整體更加簡潔明瞭。新的UI設計，提升視覺效果，讓龐雜的金融資訊更加好閱讀。同時，也更加注重產品的介紹和說明，提供友善的產品資訊和投資試算UI，幫助客戶更容易理解復華投信的複雜產品和服務...<a
 							href="works2.html" class="link--works font-weight500">更多內容</a>
 					</p>
-					<img src="images/img-work2.jpg" class="img mt-4" />
+					<a href="works1.html">
+						<img src="images/img-work2.jpg" class="img mt-4" />
+					</a>
 				</li>
 				<li class="listWorks-item">
 					<p><span class="font-cyan500 font-weight500">E.SUN Securities</span><a
@@ -103,7 +107,9 @@
 						在專案角色為前端切版，將設計師提供的設計轉化為可操作的HTML和CSS代碼，同時注重網站的可用性和使用者體驗，以便讓使用者可以輕鬆地使用和瀏覽網站...<a
 							href="works3.html" class="link--works font-weight500">更多內容</a>
 					</p>
-					<img src="images/img-work3.jpg" class="img mt-4" />
+					<a href="works1.html">
+						<img src="images/img-work3.jpg" class="img mt-4" />
+					</a>
 				</li>
 				<li class="listWorks-item">
 					<h3 class="h3 font-large font-weight700 mt-1">UDN Shopping IPad版</h3>
@@ -112,7 +118,9 @@
 						prototype讓規劃、設計以及前端快速有共識並隨時Update與調整，是很有趣的過程，在品牌視覺設計上雖然只有製作Ipad版本，客戶很滿意進而後續客戶內部設計團隊沿用修改當時Web版...<a
 							href="works3.html" class="link--works font-weight500">更多內容</a>
 					</p>
-					<img src="images/img-work4.jpg" class="img mt-4" />
+					<a href="works1.html">
+						<img src="images/img-work4.jpg" class="img mt-4" />
+					</a>
 				</li>
 			</ul>
 		</div>
