--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<a href="#works" class="nav-item">作品們</a>
 				<a href="#contact" class="nav-item">聯絡我</a>
 			</nav>
-			<div class="infoContent mb-4">
+			<div class="infoContent pb-10">
 				<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">工作經歷</h2>
 				<div class="description mt-6 mb-8">
 					<p class="font-medium font-weight700">Isobar 安索帕</p>
