--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			</div>
 			<nav class="nav">
 				<a href="javascript:;" class="nav-item">En Version(coming soon)</a>
-				<a href="#works" class="nav-item">作品們</a>
+				<a href="#works" class="nav-item">歷年作品</a>
 				<a href="#contact" class="nav-item">聯絡我</a>
 			</nav>
-			<div class="infoContent pb-10">
+			<div class="infoContent pb-8">
 				<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">工作經歷</h2>
 				<div class="description mt-6 mb-8">
 					<p class="font-medium font-weight700">Isobar 安索帕</p>
@@ -67,7 +67,7 @@
 			</div>
 		</div>
 		<div class="works articleWidth">
-			<h2 id="works" class="h2 h2--dots h2--works font-xLarge font-weight400">作品們</h2>
+			<h2 id="works" class="h2 h2--dots h2--works font-xLarge font-weight400">歷年作品</h2>
 			<ul class="listWorks mt-6">
 				<li class="listWorks-item">
 					<p><span class="font-cyan500 font-weight500">EvaAir</span><a
