--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=Roboto:wght@100;300;400;500;700&display=swap"
 		rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script src="js/global.js"></script>
 	<title>07's Profile</title>
-	<style>
-		html {
-			scroll-behavior: smooth;
-		}
-	</style>
 </head>
 
 <body>
-	<div id="wrap" class="mt-10">
+	<div id="wrap" class="index">
 		<h1 class="sr-only">07's Profile</h1>
+		<header class="header--index contentWidth">
+			<a href="javascript:;" class="navToggle">
+				<span class="navToggle-hamburger"></span>
+			</a>
+			<nav class="nav">
+				<!-- <a href="javascript:;" class="nav-item">En Version</a> -->
+				<a href="#works" class="nav-item">歷年作品</a>
+				<a href="#contact" class="nav-item">聯絡我</a>
+			</nav>
+		</header>
 		<div class="info contentWidth">
 			<div class="avatar">
 				<div class="avatarImg fontRobo"></div>
 			</div>
-			<nav class="nav">
-				<a href="javascript:;" class="nav-item">En Version(coming soon)</a>
-				<a href="#works" class="nav-item">歷年作品</a>
-				<a href="#contact" class="nav-item">聯絡我</a>
-			</nav>
 			<div class="infoContent pb-8">
 				<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">工作經歷</h2>
 				<div class="description mt-6 mb-8">
@@ -93,7 +95,7 @@
 						重新設計官網架構，從舊有的架構中淘汰掉複雜、冗餘的內容，使得網站整體更加簡潔明瞭。新的UI設計，提升視覺效果，讓龐雜的金融資訊更加好閱讀。同時，也更加注重產品的介紹和說明，提供友善的產品資訊和投資試算UI，幫助客戶更容易理解復華投信的複雜產品和服務...<a
 							href="works2.html" class="link--works font-weight500">更多內容</a>
 					</p>
-					<a href="works1.html">
+					<a href="works2.html">
 						<img src="images/img-work2.jpg" class="img mt-4" />
 					</a>
 				</li>
@@ -107,7 +109,7 @@
 						在專案角色為前端切版，將設計師提供的設計轉化為可操作的HTML和CSS代碼，同時注重網站的可用性和使用者體驗，以便讓使用者可以輕鬆地使用和瀏覽網站...<a
 							href="works3.html" class="link--works font-weight500">更多內容</a>
 					</p>
-					<a href="works1.html">
+					<a href="works3.html">
 						<img src="images/img-work3.jpg" class="img mt-4" />
 					</a>
 				</li>
@@ -118,7 +120,7 @@
 						prototype讓規劃、設計以及前端快速有共識並隨時Update與調整，是很有趣的過程，在品牌視覺設計上雖然只有製作Ipad版本，客戶很滿意進而後續客戶內部設計團隊沿用修改當時Web版...<a
 							href="works3.html" class="link--works font-weight500">更多內容</a>
 					</p>
-					<a href="works1.html">
+					<a href="works4.html">
 						<img src="images/img-work4.jpg" class="img mt-4" />
 					</a>
 				</li>
