--- a/works1.html
+++ b/works1.html
@@ -18,7 +18,7 @@
 
 <body>
 	<div id="wrap">
-		<header class="header header-eva">
+		<header class="header--page header--eva">
 			<h1 class="sr-only">07's Profile</h1>
 			<nav class="nav-page">
 				<a href="index.html" class="font-white">回首頁</a>
@@ -33,7 +33,7 @@
 		</header>
 		<main class="main main-page articleWidth">
 			<article class="article font-medium">
-				<h3 class="font-large font-weight500">參與使用者研究開始，了解不同族群的應用場景的顧客體驗</h3>
+				<h3 class="font-large font-weight500">參與使用者研究開始，了解不同族群的應用情境的顧客體驗</h3>
 				<p class="mt-2">
 					由於客戶顧客涵蓋了忠誠商業會員到一般休閒旅遊客，因此需要進行更加細緻化和全面性的使用者研究。專案進程中採取三階段(前/中/後)的使用者研究，進一步了解不同類型顧客的需求和習慣。</p>
 				<p class="mt-4"><span class="font-weight500">前期提案階段</span> -
@@ -74,7 +74,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="images/eva/img-caseEva4.jpg" class="img img--outline mt-8" alt="會員帳戶總覽頁圖" />
+					<img src="images/eva/img-caseEva4.jpg" class="img img--outline mt-10" alt="會員帳戶總覽頁圖" />
 					<figcaption>
 						<p class="w100 font-gray500 alignCenter mt-2">會員帳戶總覽頁，會員哩程資訊以簡潔圖像搭配文字呈現</p>
 					</figcaption>
@@ -91,7 +91,7 @@
 				</figure>
 			</article>
 			<h2 id="morePage" class="h2 h2--dots font-xLarge font-weight400 mt-16">更多頁面</h2>
-			<ul class="listMorePage w100 mt-4">
+			<ul class="listMorePage w100 mt-4" data-file="eva">
 				<li class="listMorePage-item">
 					<a href="#lightbox" class="link--morePage">
 						<figure>
