--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</a>
 			<nav class="nav">
 				<!-- <a href="javascript:;" class="nav-item">En Version</a> -->
-				<a href="#works" class="nav-item">歷年作品</a>
+				<a href="#works" class="nav-item">作品案例</a>
 				<a href="#contact" class="nav-item">聯絡我</a>
 			</nav>
 		</header>
@@ -69,7 +69,7 @@
 			</div>
 		</div>
 		<div class="works articleWidth">
-			<h2 id="works" class="h2 h2--dots h2--works font-xLarge font-weight400">歷年作品</h2>
+			<h2 id="works" class="h2 h2--dots h2--works font-xLarge font-weight400">作品案例</h2>
 			<ul class="listWorks mt-6">
 				<li class="listWorks-item">
 					<p><span class="font-cyan500 font-weight500">EvaAir</span><a
@@ -169,6 +169,7 @@
 				<img src="images/img-moreWorks1.jpg" alt="" class="img mt-2">
 			</li>
 		</ul>
+		<a href="#" class="link--goTop"></a>
 	</div>
 </body>
 
