--- a/works1.html
+++ b/works1.html
@@ -13,19 +13,16 @@
 		rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="js/global.js"></script>
-	<title>07's Profile</title>
+	<title>07's Profile 作品案例</title>
 </head>
 
 <body>
 	<div id="wrap">
 		<header class="header--page header--eva">
 			<h1 class="sr-only">07's Profile</h1>
-			<nav class="nav-page">
-				<a href="index.html" class="font-white">回首頁</a>
-				<!-- <a href="">聯絡我</a> -->
-			</nav>
+			<a href="index.html" class="link--home font-white"><span>回首頁</span></a>
 			<div class="alignCenter pt-16 pb-16">
-				<h2 class="w100 font-xxLarge font-white font-weight500">長榮航空 Evaair 官網改版</h2>
+				<h2 class="h2--page w100 font-xxLarge font-white font-weight500">長榮航空 Evaair 官網改版</h2>
 				<a href="https://www.evaair.com/zh-tw/index.html" target="_blank"
 					class="link--pageLinkOut link--pageLinkOutEva mt-4">View
 					Website</a>
@@ -160,6 +157,7 @@
 			</div>
 
 		</main>
+		<a href="#" class="link--goTop"></a>
 	</div>
 	<div id="lightbox" class="lightbox">
 		<a href="#morePage" class="lightbox-close"></a>
