--- a/works2.html
+++ b/works2.html
@@ -20,12 +20,9 @@
 	<div id="wrap">
 		<header class="header--page header--fhtrust">
 			<h1 class="sr-only">07's Profile</h1>
-			<nav class="nav-page">
-				<a href="index.html" class="font-white">回首頁</a>
-				<!-- <a href="">聯絡我</a> -->
-			</nav>
+			<a href="index.html" class="link--home font-white"><span>回首頁</span></a>
 			<div class="alignCenter pt-16 pb-16">
-				<h2 class="w100 font-xxLarge font-white font-weight500">復華投信官網改版</h2>
+				<h2 class="h2--page w100 font-xxLarge font-white font-weight500">復華投信官網改版</h2>
 				<a href="https://www.fhtrust.com.tw/" target="_blank"
 					class="link--pageLinkOut link--pageLinkOutFhtrust mt-4">View
 					Website</a>
@@ -185,8 +182,8 @@
 					class="link--pageLinkOutBottom link--pageLinkOutFhtrustBottom mt-4">View
 					Website</a>
 			</div>
-
 		</main>
+		<a href="#" class="link--goTop"></a>
 	</div>
 	<div id="lightbox" class="lightbox">
 		<a href="#morePage" class="lightbox-close"></a>
