--- a/index.html
+++ b/index.html
@@ -126,48 +126,54 @@
 				</li>
 			</ul>
 		</div>
-		<h2 id="works" class="">行銷類作品</h2>
+		<h4 id="works" class="w100 alignCenter font-medium font-weight500 mb-4">行銷類作品</h4>
 		<ul class="listMoreWork contentWidth">
 			<li class="listMoreWork-item">
-				<p class="fontRobo font-medium font-weight500">Dantsu / Dan is Moving</p>
+				<p class="fontRobo font-medium font-weight400">Dantsu / Dan is Moving</p>
 				<img src="images/img-moreWorks1.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight500">Logitech / UE潮玩360</p>
+				<p class="font-medium font-weight400">Logitech / UE潮玩360</p>
 				<img src="images/img-moreWorks2.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight500">Adidas / 酷涼零死角Climacool 大風吹</p>
+				<p class="font-medium font-weight400">Adidas / 酷涼零死角Climacool 大風吹</p>
 				<img src="images/img-moreWorks3.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight500">Adidas Women / 自信魔鏡</p>
+				<p class="font-medium font-weight400">Adidas Women / 自信魔鏡</p>
 				<img src="images/img-moreWorks4.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight500">SAMSUNG / 樂趣雙螢</p>
+				<p class="font-medium font-weight400">SAMSUNG / 樂趣雙螢</p>
 				<img src="images/img-moreWorks5.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight500">富達 / 投資金頭腦</p>
+				<p class="font-medium font-weight400">富達 / 投資金頭腦</p>
 				<img src="images/img-moreWorks6.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight500">黑貓宅急便 / 黑貓鳥行李</p>
+				<p class="font-medium font-weight400">黑貓宅急便 / 黑貓鳥行李</p>
 				<img src="images/img-moreWorks7.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight500">黑貓宅急便 / X’mas交換禮物派對</p>
+				<p class="font-mediu font-weight400">黑貓宅急便 / X’mas交換禮物派對</p>
 				<img src="images/img-moreWorks8.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight500">7-11 / 歡樂雲端超商</p>
+				<p class="font-mediu font-weight400">7-11 / 歡樂雲端超商</p>
 				<img src="images/img-moreWorks9.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight500">7-11 / 萬聖節搗蛋鬼派對</p>
+				<p class="font-mediu font-weight400">7-11 / 萬聖節搗蛋鬼派對</p>
 				<img src="images/img-moreWorks1.jpg" alt="" class="img mt-2">
 			</li>
+		</ul>
+		<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">聯絡我</h2>
+		<ul id="contact" class="contact mt-4">
+			<li class="contact-item">Tel : 0912-212-773</li>
+			<li class="contact-item">Mail : pecylin@gmail.com</li>
+			<li class="contact-item">Line ID : zerooseven </li>
 		</ul>
 		<a href="#" class="link--goTop"></a>
 	</div>
