--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
 					<ul class="timeline mt-2 mb-4">
 						<li class="timeline-item">
 							<p class="font-medium font-weight400">UI Designer<br /><span
-									class="font-gray500 font-weight300">(2019-2023)
+									class="font-gray500 font-weight300">(2023-2019)
 									負責網站和APP的設計和開發，參與研究分析、設計策略提案與制定</span>
 							</p>
 						</li>
 						<li class="timeline-item">
-							<p class="font-medium font-weight400">前端切版<br /><span
-									class="font-gray500 font-weight300">(2014-2019) 進入Html CSS的世界，企業網站、網路活動、App切版</span>
+							<p class="font-medium font-weight400">Frontend Engineer<br /><span
+									class="font-gray500 font-weight300">(2019-2013) 進入Html CSS的世界，企業網站、網路活動、App切版</span>
 							</p>
 						</li>
 						<li class="timeline-item">
-							<p class="font-medium font-weight400">經驗設計師<br /><span
-									class="font-gray500 font-weight300">(2008-2014) 創意活動發想、提案、製作各式媒體素材製作resize</span>
+							<p class="font-medium font-weight400">Experience Designer<br /><span
+									class="font-gray500 font-weight300">(2013-2008) 創意活動發想、提案、製作各式媒體素材製作resize</span>
 							</p>
 						</li>
 					</ul>
 					<p class="font-medium font-weight700 mt-4">橙網科技</p>
-					<p class="font-medium font-weight400">經驗設計師<br /><span
+					<p class="font-medium font-weight400">Web Designer<br /><span
 							class="font-gray500 font-weight300">(2007-2008) 創意活動發想、提案、製作各式媒體素材製作resize</span></p>
 					<p class="font-medium font-weight700 mt-4">玉馬門創意設計</p>
 					<p class="font-medium font-weight400">Web Designer<br /><span
@@ -166,7 +166,27 @@
 			</li>
 			<li class="listMoreWork-item">
 				<p class="font-mediu font-weight400">7-11 / 萬聖節搗蛋鬼派對</p>
-				<img src="images/img-moreWorks1.jpg" alt="" class="img mt-2">
+				<img src="images/img-moreWorks10.jpg" alt="" class="img mt-2">
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-mediu font-weight400">Amway / 創世代</p>
+				<img src="images/img-moreWorks11.jpg" alt="" class="img mt-2">
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-mediu font-weight400">Amway / 決戰早餐料理台</p>
+				<img src="images/img-moreWorks12.jpg" alt="" class="img mt-2">
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-mediu font-weight400">Toyota / 驅動城市APP</p>
+				<img src="images/img-moreWorks13.jpg" alt="" class="img mt-2">
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-mediu font-weight400">Hennessy / 音樂基因</p>
+				<img src="images/img-moreWorks14.jpg" alt="" class="img mt-2">
+			</li>
+			<li class="listMoreWork-item">
+				<p class="font-mediu font-weight400">Gamania 全球官網(已下線)</p>
+				<img src="images/img-moreWorks15.jpg" alt="" class="img mt-2">
 			</li>
 		</ul>
 		<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">聯絡我</h2>
