content modify add en version

--- a/index-en.html
+++ b/index-en.html
@@ -24,9 +24,9 @@
 				<span class="navToggle-hamburger"></span>
 			</a>
 			<nav class="nav">
-				<a href="javascript:;" class="nav-item">En</a>
-				<a href="#works" class="nav-item">作品案例</a>
-				<a href="#contact" class="nav-item">聯絡我</a>
+				<!-- <a href="javascript:;" class="nav-item">En Version</a> -->
+				<a href="#works" class="nav-item">Works</a>
+				<a href="#contact" class="nav-item">Contact</a>
 			</nav>
 		</header>
 		<div class="info contentWidth">
@@ -34,24 +34,29 @@
 				<div class="avatarImg fontRobo"></div>
 			</div>
 			<div class="infoContent pb-8">
-				<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">工作經歷</h2>
+				<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">Work experience</h2>
 				<div class="description mt-6 mb-8">
-					<p class="font-medium font-weight700">Isobar 安索帕</p>
-					<p class="font-medium mt-1">
-						任職於Isobar 安索帕
-						14年，安索帕為電通集團旗下提供設計、策略、創意和技術等多種數位行銷解決方案的代理商。期間接觸過許多不同類型的客戶與與專案，類型也從網路活動、媒體製作、網站製作到實體店頭、OOH...等，累積了豐富的經驗，工作內容(專業)也隨年資累積逐漸轉換，從創意發想、活動設計到前端切版與UI設計師等多項職責，雖然職責不同，但是工作目標都是與團隊一起瞭解客戶需求和目標，並提出對應的策略進一步的產出相關的需求製作物。
-					</p>
+					<p class="font-medium font-weight700">Isobar</p>
+					<p class="font-medium mt-1">I have been working at Isobar for 14 years. Isobar is an agency under
+						the Dentsu Group that provides various digital marketing solutions, such as design, strategy,
+						creativity, and technology. During my tenure, I have worked with many different types of clients
+						and projects, ranging from online events, media production, website creation, to physical
+						storefronts, OOH, and more, accumulating rich experience. As my seniority grew, my professional
+						responsibilities also gradually shifted from creative ideation, event design to front-end
+						development and UI design. Although my duties were different, the common goal was to understand
+						clients' needs and goals with the team and propose corresponding strategies to further produce
+						related deliverables.</p>
 					<ul class="timeline mt-2 mb-4">
 						<li class="timeline-item">
 							<p class="font-medium font-weight400">UI Designer<br /><span
-									class="font-gray500 font-weight300">(2023-2019)
-									負責網站和APP的設計和開發，參與研究分析、設計策略提案與制定</span>
+									class="font-gray500 font-weight300">(2023-2019)Responsible for website and app
+									design and development, participating in research and analysis, proposing and
+									formulating design strategies.</span>
 							</p>
 						</li>
 						<li class="timeline-item">
 							<p class="font-medium font-weight400">Frontend Engineer<br /><span
-									class="font-gray500 font-weight300">(2019-2013) 進入Html CSS/Javascript(Jquery)
-									的世界，企業網站、網路活動、App切版</span>
+									class="font-gray500 font-weight300">(2019-2013) 進入Html CSS的世界，企業網站、網路活動、App切版</span>
 							</p>
 						</li>
 						<li class="timeline-item">
